# shield

./: .gitignore  README.md
docs/: CONCEPT.md
src/: README.md  pyproject.toml  ruff.toml
src/examples/: resolver.py
src/shield/: __init__.py  context.py  exceptions.py  resolvers.py  rules.py  type_annotations.py  utils.py
src/tests/: test_context.py  test_resolvers.py  test_rules.py  test_utils.py
